# electronics-shop-project

./: pyproject.toml
src/: item.py  keyboard.py  phone.py
tests/: test_item.py  test_keyboard.py  test_phone.py
