[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["im977 <inkoghuto@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_shop_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
